# JF-Goat

./: .gitignore  README.md  SYNC_ARCHITECTURE.md  architecture.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  api.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  error_output.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: before-bundle.cjs  generate-updater-json.js  sign-windows.ps1
src-tauri/src/: diagnostics.rs  download.rs  error.rs  image_cache.rs  lib.rs  main.rs  mpv.rs  state.rs
src-tauri/src/api/: auth.rs  client.rs  media.rs  mod.rs
src-tauri/src/commands/: auth_commands.rs  diagnostics_commands.rs  download_commands.rs  library_commands.rs  media_commands.rs  media_types.rs  mod.rs  mpv_commands.rs  playback_commands.rs  settings_commands.rs  sync_commands.rs
src-tauri/src/db/: media.rs  mod.rs  schema.rs  servers.rs
src-tauri/src/sync/: engine.rs  mod.rs  types.rs  worker.rs
src/components/layout/: LoadingScreen.svelte  MainLayout.svelte  SyncIndicator.svelte
src/components/media/: HeroBanner.svelte  HeroCarousel.svelte  MediaRow.svelte  PosterCard.svelte
src/components/player/: Player.svelte  PlayerAutoplay.svelte  PlayerControls.svelte  PlayerHeader.svelte  PlayerTimeline.svelte  SkipSegmentButton.svelte  useAutoHide.svelte.ts  usePlaybackContext.svelte.ts
src/components/ui/: Button.svelte  ErrorBanner.svelte  TextInput.svelte
src/lib/: abortableLoad.ts  api.ts  homepageFreshness.test.ts  homepageFreshness.ts  mediaStreamHelpers.test.ts  mediaStreamHelpers.ts  types.ts
src/lib/stores/: auth.svelte.ts  connectivity.svelte.ts  contextMenu.svelte.ts  homeData.svelte.ts  player.svelte.ts  preferences.svelte.ts  sync.svelte.ts  toast.svelte.ts  updater.svelte.ts
src/views/: Home.svelte  ItemDetail.svelte  Login.svelte  ServerConnect.svelte
src/views/detail/: EpisodeDetail.svelte  SeasonDetail.svelte  SeriesDetail.svelte  detailHelpers.test.ts  detailHelpers.ts
src/views/detail/components/: DetailBackdrop.svelte  DetailMetadata.svelte  DownloadModal.svelte  HorizontalCarousel.svelte
src/views/home/: HomeDashboard.svelte  LibraryView.svelte  OfflineView.svelte  SearchView.svelte  SettingsView.svelte
tests/e2e/: autologin.spec.ts  login_ratelimit.spec.ts  propagation.spec.ts  smoke.spec.ts
tests/e2e/fixtures/: tauriMock.ts
