[package]
name = "jfgoat"
version = "0.1.0"
description = "Ultra-fast Jellyfin client for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "jfgoat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev.package.scrypt]
opt-level = 3
